--- a/index.html
+++ b/index.html
@@ -6,24 +6,25 @@
     <title>Harmony Link</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<script src="main.js"></script>
 <body>
     <!-- Header -->
     <header>
         <h1>Harmony Link</h1>
+        <p>Bridging Lives, Reducing Waste, Weaving Sustainability</p>
     </header>
 
     <!-- Navigation Bar -->
     <nav>
         <ul>
-              <li><a href="index.html">Home</a></li>
-             <li><a href="about.html">About Us</a></li> 
-             <li><a href="connect.html">Connect</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li> 
+            <li><a href="connect.html">Connect</a></li>
             <li><a href="#support">Support</a></li>
             <li><a href="#engage">Engage</a></li>
             <li><a href="calender.html">Calendar</a></li>
             <li><a href="feedback.html">Feedback</a></li>
             <li><a href="#resources">Resources</a></li>
-            
         </ul>
     </nav>
 
@@ -32,6 +33,53 @@
         <h2>Welcome to Harmony Link</h2>
         <p>Connecting communities for a better tomorrow...</p>
         <!-- Add more content here based on your specific message or call to action -->
+    </section>
+
+    <section id="services">
+        <h2>Our Services</h2>
+        <div class="services">
+            <div class="service-card">
+                <img src="connecting-lives.jpg" alt="Connecting Lives">
+                <h2>Connecting Lives</h2>
+                <p>Discover opportunities to connect with care facility residents and make a positive impact on their lives.</p>
+                <!-- Additional content for Connecting Lives -->
+            </div>
+
+            <div class="service-card">
+                <img src="weaving-sustainability.jpg" alt="Weaving Sustainability">
+                <h2>Weaving Sustainability</h2>
+                <p>Join us in reducing environmental waste through textile recycling and sustainable practices.</p>
+                <!-- Additional content for Weaving Sustainability -->
+            </div>
+
+            <div class="service-card">
+                <img src="food.jpg" alt="Food">
+                <h2>Donate Excess Food</h2>
+                <p>Join us in reducing food waste.</p>
+                <!-- Additional content for Donate Excess Food -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Volunteer Section -->
+    <section id="volunteer">
+        <h2>Volunteer with Us</h2>
+        <p>Ready to make a difference? Explore volunteer opportunities and become a part of the HarmonyLink community.</p>
+        <a href="#volunteer" class="cta-button">Get Involved</a>
+    </section>
+
+    <!-- Partnerships Section -->
+    <section id="partners">
+        <h2>Partnerships</h2>
+        <p>Collaborate with us to strengthen the impact of our initiatives. Learn more about partnership opportunities and how we can work together for a better tomorrow.</p>
+        <a href="#partners" class="cta-button">Explore Partnerships</a>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Have questions or want to get in touch? Reach out to us, and we'll be happy to assist you.</p>
+        <a href="#contact" class="cta-button">Contact Us</a>
     </section>
 
     <!-- Footer -->
